[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ledgermem-langchain"
version = "0.1.0"
description = "LangChain adapter for LedgerMem — drop-in BaseMemory and Retriever backed by the LedgerMem SDK."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "LedgerMem", email = "founders@proofly.dev" }]
keywords = ["ledgermem", "langchain", "memory", "rag", "retriever", "llm"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "ledgermem>=0.1",
  "langchain-core>=0.3,<1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7",
  "pytest-asyncio>=0.23",
  "ruff>=0.5",
  "mypy>=1.10",
]

[project.urls]
Homepage = "https://github.com/ledgermem/ledgermem-langchain"
Issues = "https://github.com/ledgermem/ledgermem-langchain/issues"
Source = "https://github.com/ledgermem/ledgermem-langchain"

[tool.hatch.build.targets.wheel]
packages = ["src/langchain_ledgermem"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
