[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mnemo-langchain"
version = "0.1.0"
description = "LangChain adapter for Mnemo — drop-in BaseMemory and Retriever backed by the Mnemo SDK."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Mnemo", email = "founders@getmnemo.xyz" }]
keywords = ["getmnemo", "langchain", "memory", "rag", "retriever", "llm"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "getmnemo>=0.1",
  "langchain-core>=0.3,<1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7",
  "pytest-asyncio>=0.23",
  "ruff>=0.5",
  "mypy>=1.10",
]

[project.urls]
Homepage = "https://github.com/getmnemo/getmnemo-langchain"
Issues = "https://github.com/getmnemo/getmnemo-langchain/issues"
Source = "https://github.com/getmnemo/getmnemo-langchain"

[tool.hatch.build.targets.wheel]
packages = ["src/langchain_getmnemo"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
